fix(ui): update dark mode variables and locales

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -232,7 +232,7 @@
   --disabled-picker-opacity: 0.3;
   --picker-panel-background: transparent;
   // select box
-  --select-box-border: 1px solid #{$grey-dark-8};
+  --select-box-border: 1px solid #{$grey-dark-3};
   --select-box-background: #{$grey-dark-8};
   --select-box-active-border: 1px solid #{$purple-dark};
   --select-box-error-border: 1px solid #{$red-2};
